Keep the donate link visible on mobiles. Fixes #466.

--- a/wwwbase/css/responsive.css
+++ b/wwwbase/css/responsive.css
@@ -11,14 +11,28 @@ body {
 }
 
 @media (max-width: 768px) {
+  .navbar-collapse {
+     clear:both;
+  }
+}
+@media (max-width: 992px) {
   #logo-wide {
     display: none;
   }
 }
-@media (min-width: 769px) {
+@media (min-width: 993px) {
   #logo-narrow {
     display: none;
   }
+}
+
+.navbar-default .navbar-nav>li>a.donateLink {
+  color: #1e83c2;
+}
+
+/* Accomodate non-collapsible donate link. */
+.navbar-toggle {
+  margin-left: 20px;
 }
 
 .table-caption {
